// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawPieceSection renders correctly 1`] = `
Array [
  <View
    style={
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "margin": 2,
          "maxHeight": "100%",
          "maxWidth": "100%",
        }
      }
    >
      <MeasureView
        onMeasure={[Function]}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "gray",
            "maxHeight": "100%",
            "maxWidth": "100%",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "margin": 2,
          "maxHeight": "100%",
          "maxWidth": "100%",
        }
      }
    >
      <MeasureView
        onMeasure={[Function]}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "gray",
            "maxHeight": "100%",
            "maxWidth": "100%",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "margin": 2,
          "maxHeight": "100%",
          "maxWidth": "100%",
        }
      }
    >
      <MeasureView
        onMeasure={[Function]}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "gray",
            "maxHeight": "100%",
            "maxWidth": "100%",
          }
        }
      />
    </View>
  </View>,
  ");",
]
`;

exports[`DrawPieceSection renders correctly 2`] = `
Array [
  <View
    style={
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "margin": 2,
          "maxHeight": "100%",
          "maxWidth": "100%",
        }
      }
    >
      <MeasureView
        onMeasure={[Function]}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "gray",
            "maxHeight": "100%",
            "maxWidth": "100%",
          }
        }
      >
        <PieceDraggableView
          allowDrag={false}
          baseSize={100}
          piece={
            Array [
              Array [
                "",
                "",
                "",
                "",
              ],
              Array [
                "",
                "",
                "",
                "",
              ],
              Array [
                "",
                "",
                "d",
                "s",
              ],
              Array [
                "",
                "",
                "e",
                "i",
              ],
            ]
          }
          pieceIndex={0}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "gray",
              "maxHeight": "100%",
              "maxWidth": "100%",
            }
          }
        >
          <PieceDrawLetterGrid
            piece={
              Array [
                Array [
                  "",
                  "",
                  "",
                  "",
                ],
                Array [
                  "",
                  "",
                  "",
                  "",
                ],
                Array [
                  "",
                  "",
                  "d",
                  "s",
                ],
                Array [
                  "",
                  "",
                  "e",
                  "i",
                ],
              ]
            }
            pieceSize={100}
          />
        </PieceDraggableView>
      </MeasureView>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "margin": 2,
          "maxHeight": "100%",
          "maxWidth": "100%",
        }
      }
    >
      <MeasureView
        onMeasure={[Function]}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "gray",
            "maxHeight": "100%",
            "maxWidth": "100%",
          }
        }
      >
        <PieceDraggableView
          allowDrag={false}
          baseSize={100}
          piece={
            Array [
              Array [
                "",
                "",
                "h",
                "",
              ],
              Array [
                "",
                "",
                "e",
                "",
              ],
              Array [
                "",
                "",
                "w",
                "l",
              ],
              Array [
                "",
                "",
                "",
                "",
              ],
            ]
          }
          pieceIndex={1}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "gray",
              "maxHeight": "100%",
              "maxWidth": "100%",
            }
          }
        >
          <PieceDrawLetterGrid
            piece={
              Array [
                Array [
                  "",
                  "",
                  "h",
                  "",
                ],
                Array [
                  "",
                  "",
                  "e",
                  "",
                ],
                Array [
                  "",
                  "",
                  "w",
                  "l",
                ],
                Array [
                  "",
                  "",
                  "",
                  "",
                ],
              ]
            }
            pieceSize={100}
          />
        </PieceDraggableView>
      </MeasureView>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "margin": 2,
          "maxHeight": "100%",
          "maxWidth": "100%",
        }
      }
    >
      <MeasureView
        onMeasure={[Function]}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "gray",
            "maxHeight": "100%",
            "maxWidth": "100%",
          }
        }
      >
        <PieceDraggableView
          allowDrag={false}
          baseSize={100}
          piece={
            Array [
              Array [
                "",
                "",
                "",
                "",
              ],
              Array [
                "",
                "",
                "",
                "",
              ],
              Array [
                "l",
                "c",
                "r",
                "",
              ],
              Array [
                "",
                "o",
                "",
                "",
              ],
            ]
          }
          pieceIndex={2}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "gray",
              "maxHeight": "100%",
              "maxWidth": "100%",
            }
          }
        >
          <PieceDrawLetterGrid
            piece={
              Array [
                Array [
                  "",
                  "",
                  "",
                  "",
                ],
                Array [
                  "",
                  "",
                  "",
                  "",
                ],
                Array [
                  "l",
                  "c",
                  "r",
                  "",
                ],
                Array [
                  "",
                  "o",
                  "",
                  "",
                ],
              ]
            }
            pieceSize={100}
          />
        </PieceDraggableView>
      </MeasureView>
    </View>
  </View>,
  ");",
]
`;
